// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders Avatars correctly when set src, icon and string 1`] = `
<div>
  <span
    class="za-avatar is-circle has-icon has-image has-string"
  >
    <img
      alt=""
      src="http://img95.699pic.com/element/40044/5588.png_860.png"
    />
  </span>
</div>
`;

exports[`Avatar renders Avatars of different shape correctly 1`] = `
<div>
  <Avatar
    alt=""
    icon=""
    prefixCls="za-avatar"
    shape="circle"
    size="circle"
    src=""
  />
  <Avatar
    alt=""
    icon=""
    prefixCls="za-avatar"
    shape="circle"
    size="square"
    src=""
  />
</div>
`;

exports[`Avatar renders Avatars of different size correctly 1`] = `
<div>
  <span
    class="za-avatar is-circle has-icon"
    style="width:80px;height:80px;line-height:80px;font-size:40px"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar za-avatar--xl is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar za-avatar--lg is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar za-avatar--sm is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar za-avatar--xs is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
</div>
`;

exports[`Avatar renders Avatars of different type correctly 1`] = `
<div>
  <span
    class="za-avatar is-circle has-icon"
  >
    <i
      class="za-icon za-icon-user theme-default"
    />
  </span>
  <span
    class="za-avatar is-circle has-string"
  >
    <span
      style="position:absolute;transform:scale(1);left:calc(50% - 4.5px )"
    >
      U
    </span>
  </span>
  <span
    class="za-avatar is-circle has-string"
  >
    <span
      style="position:absolute;transform:scale(0.7);left:calc(50% - 18px )"
    >
      USER
    </span>
  </span>
  <span
    class="za-avatar is-circle has-image"
  >
    <img
      alt="my avatar"
      src="http://img95.699pic.com/element/40044/5588.png_860.png"
    />
  </span>
  <span
    class="za-avatar is-circle has-string"
    style="color:#2db7f5;background-color:rgb(249, 232, 8)"
  >
    <span
      style="position:absolute;transform:scale(1);left:calc(50% - 4.5px )"
    >
      U
    </span>
  </span>
</div>
`;
